Bug 236956 - kmymoney crashed when accessing a budget report
Summary: kmymoney crashed when accessing a budget report
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR crash
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-05-09 10:15 UTC by Blink Eye
Modified: 2010-05-09 16:40 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Blink Eye 2010-05-09 10:15:04 UTC
Application: kmymoney (3.97.2)
KDE Platform Version: 4.4.2 (KDE 4.4.2) (Compiled from sources)
Qt Version: 4.6.2
Operating System: Linux 2.6.31-gentoo-r6 x86_64
Distribution (Platform): Gentoo Packages

-- Information about the crash:
kmymoney crashes in the following situation:

1. create a budget
2. create a custom budgeting report using this budget (e.g. copy yearly budget)
3. delete the budget
4. create a new budget with the same name
5. open/delete/edit custom budgeting report

The segfault happens only after re-creating a budget with the same name.

There's no need of any data to be involved, but you need some accounts (e.g. United States -> Base -Blank account will suffice).

You cannot delete those crashing budget reports.

Further information:
- Consistency check is ok
- Version 3.97.1, KDE 4.3.5
- Version 3.97.2, KDE 4.4.2


The crash can be reproduced every time.

 -- Backtrace:
Application: KMyMoney (kmymoney), signal: Segmentation fault
[KCrash Handler]
#5  QBasicAtomicInt::ref (this=0xf19b80, _id=...) at /usr/include/qt4/QtCore/qatomic_x86_64.h:121
#6  QString (this=0xf19b80, _id=...) at /usr/include/qt4/QtCore/qstring.h:715
#7  MyMoneyObject (this=0xf19b80, _id=...) at /home/rglauser/workspace/blinkeye.ch/kmymoney-3.97.2/kmymoney/mymoney/mymoneyobject.h:44
#8  MyMoneyBudget (this=0xf19b80, _id=...) at /home/rglauser/workspace/blinkeye.ch/kmymoney-3.97.2/kmymoney/mymoney/mymoneybudget.h:55
#9  MyMoneySeqAccessMgr::budget (this=0xf19b80, _id=...) at /home/rglauser/workspace/blinkeye.ch/kmymoney-3.97.2/kmymoney/mymoney/storage/mymoneyseqaccessmgr.cpp:1648
#10 0x00007f5de17fbfb7 in MyMoneyFile::budget (this=0x7f5de1a9a440, id=...) at /home/rglauser/workspace/blinkeye.ch/kmymoney-3.97.2/kmymoney/mymoney/mymoneyfile.cpp:2148
#11 0x0000000000576707 in reports::PivotTable::calculateBudgetMapping (this=0x1a9d3a0) at /home/rglauser/workspace/blinkeye.ch/kmymoney-3.97.2/kmymoney/reports/pivottable.cpp:803
#12 0x0000000000579e6f in reports::PivotTable::init (this=0x1a9d3a0) at /home/rglauser/workspace/blinkeye.ch/kmymoney-3.97.2/kmymoney/reports/pivottable.cpp:169
#13 0x000000000057afc2 in PivotTable (this=0x1a9d3a0, _config_f=...) at /home/rglauser/workspace/blinkeye.ch/kmymoney-3.97.2/kmymoney/reports/pivottable.cpp:94
#14 0x00000000004ea1c1 in KReportsView::KReportTab::updateReport (this=0x1a01970) at /home/rglauser/workspace/blinkeye.ch/kmymoney-3.97.2/kmymoney/views/kreportsview.cpp:189
#15 0x00000000004ea2e9 in KReportsView::KReportTab::showEvent (this=0x1a01970, event=0x7fff287494c0) at /home/rglauser/workspace/blinkeye.ch/kmymoney-3.97.2/kmymoney/views/kreportsview.cpp:167
#16 0x00007f5ddcca4b52 in QWidget::event(QEvent*) () from /usr/lib64/qt4/libQtGui.so.4
#17 0x00007f5ddcc574b6 in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /usr/lib64/qt4/libQtGui.so.4
#18 0x00007f5ddcc5deb1 in QApplication::notify(QObject*, QEvent*) () from /usr/lib64/qt4/libQtGui.so.4
#19 0x00007f5ddfe21764 in KApplication::notify(QObject*, QEvent*) () from /usr/lib/libkdeui.so.5
#20 0x00007f5ddd7ff26e in QCoreApplication::notifyInternal(QObject*, QEvent*) () from /usr/lib64/qt4/libQtCore.so.4
#21 0x00007f5ddcca8ff0 in QWidgetPrivate::show_helper() () from /usr/lib64/qt4/libQtGui.so.4
#22 0x00007f5ddcca94e4 in QWidget::setVisible(bool) () from /usr/lib64/qt4/libQtGui.so.4
#23 0x00007f5ddcc90c22 in QStackedLayout::setCurrentIndex(int) () from /usr/lib64/qt4/libQtGui.so.4
#24 0x00007f5ddd05e5f5 in ?? () from /usr/lib64/qt4/libQtGui.so.4
#25 0x00007f5ddd05e756 in QTabWidget::qt_metacall(QMetaObject::Call, int, void**) () from /usr/lib64/qt4/libQtGui.so.4
#26 0x00007f5ddff055bf in KTabWidget::qt_metacall(QMetaObject::Call, int, void**) () from /usr/lib/libkdeui.so.5
#27 0x00007f5ddd810970 in QMetaObject::activate(QObject*, QMetaObject const*, int, void**) () from /usr/lib64/qt4/libQtCore.so.4
#28 0x00007f5ddd054a7e in QTabBar::currentChanged(int) () from /usr/lib64/qt4/libQtGui.so.4
#29 0x00000000004f40cd in KReportsView::qt_metacall (this=0x1283c10, _c=QMetaObject::InvokeMetaMethod, _id=<value optimized out>, _a=0x7fff287498a0)
    at /home/rglauser/workspace/blinkeye.ch/kmymoney-3.97.2/build/kmymoney/views/kreportsview.moc:118
#30 0x00007f5ddd810970 in QMetaObject::activate(QObject*, QMetaObject const*, int, void**) () from /usr/lib64/qt4/libQtCore.so.4
#31 0x00007f5de0f9bed8 in Q3ListView::doubleClicked(Q3ListViewItem*) () from /usr/lib64/qt4/libQt3Support.so.4
#32 0x00007f5ddf46a0dc in K3ListView::contentsMouseDoubleClickEvent(QMouseEvent*) () from /usr/lib/libkde3support.so.4
#33 0x00007f5de0eb96e2 in Q3ScrollView::viewportMouseDoubleClickEvent(QMouseEvent*) () from /usr/lib64/qt4/libQt3Support.so.4
#34 0x00007f5de0ebac26 in Q3ScrollView::eventFilter(QObject*, QEvent*) () from /usr/lib64/qt4/libQt3Support.so.4
#35 0x00007f5de0e69826 in Q3ListView::eventFilter(QObject*, QEvent*) () from /usr/lib64/qt4/libQt3Support.so.4
#36 0x00007f5ddd7fe8ca in QCoreApplicationPrivate::sendThroughObjectEventFilters(QObject*, QEvent*) () from /usr/lib64/qt4/libQtCore.so.4
#37 0x00007f5ddcc57495 in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /usr/lib64/qt4/libQtGui.so.4
#38 0x00007f5ddcc5ec3d in QApplication::notify(QObject*, QEvent*) () from /usr/lib64/qt4/libQtGui.so.4
#39 0x00007f5ddfe21764 in KApplication::notify(QObject*, QEvent*) () from /usr/lib/libkdeui.so.5
#40 0x00007f5ddd7ff26e in QCoreApplication::notifyInternal(QObject*, QEvent*) () from /usr/lib64/qt4/libQtCore.so.4
#41 0x00007f5ddcc5ce22 in QApplicationPrivate::sendMouseEvent(QWidget*, QMouseEvent*, QWidget*, QWidget*, QWidget**, QPointer<QWidget>&, bool) () from /usr/lib64/qt4/libQtGui.so.4
#42 0x00007f5ddccd38dd in ?? () from /usr/lib64/qt4/libQtGui.so.4
#43 0x00007f5ddccd2835 in QApplication::x11ProcessEvent(_XEvent*) () from /usr/lib64/qt4/libQtGui.so.4
#44 0x00007f5ddccf8b2a in ?? () from /usr/lib64/qt4/libQtGui.so.4
#45 0x00007f5ddb38f053 in g_main_context_dispatch () from /usr/lib/libglib-2.0.so.0
#46 0x00007f5ddb39214c in ?? () from /usr/lib/libglib-2.0.so.0
#47 0x00007f5ddb3922ce in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#48 0x00007f5ddd824bf4 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib64/qt4/libQtCore.so.4
#49 0x00007f5ddccf8746 in ?? () from /usr/lib64/qt4/libQtGui.so.4
#50 0x00007f5ddd7fdf44 in QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib64/qt4/libQtCore.so.4
#51 0x00007f5ddd7fe28f in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib64/qt4/libQtCore.so.4
#52 0x00007f5ddd80025e in QCoreApplication::exec() () from /usr/lib64/qt4/libQtCore.so.4
#53 0x000000000045fa63 in main (argc=1, argv=0x7fff2874ba88) at /home/rglauser/workspace/blinkeye.ch/kmymoney-3.97.2/kmymoney/main.cpp:277

Possible duplicates by query: bug 223744.

Reported using DrKonqi
Comment 1 Alvaro Soliverez 2010-05-09 14:09:42 UTC
Can you please post an anonymized file? that usually helps us fix this kind of problems faster?
Comment 2 Alvaro Soliverez 2010-05-09 16:40:15 UTC
SVN commit 1124583 by asoliverez:

Made sure that even if a budget is selected for a report, the budget is really valid.
TODO: Add this to the consistency check, after the string-freeze.

BUG:236956

 M  +18 -7     pivottable.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1124583