Made sure that even if a budget is selected for a report, the budget is really valid. TODO: Add this to the consistency check, after the string-freeze.

BUG:236956

svn path=/trunk/playground/office/kmymoney/; revision=1124583